# ai-semantic-search

./: .gitignore  Makefile  README.md  docker-compose.yml
AICore/: .dockerignore  .env  .env.example  README.md  alembic.ini  main.py  pyproject.toml
AICore/app/: main.py
AICore/app/api/: routes.py
AICore/app/api/endpoints/: collection.py  embedding.py  healthcheck.py  poi_filter.py  query_understand.py  search.py  tasco_search.py  vector_search.py
AICore/app/const/: healthcheck.py
AICore/app/core/: config.py  database.py  logger.py
AICore/app/database/: models.py  session.py
AICore/app/grpc/embedding/: embedding_client.py  embedding_service_pb2.py  embedding_service_pb2_grpc.py
AICore/app/helpers/: opening_hours_matcher.py  poi_signal_reranker.py  query_understand.py
AICore/app/prisma/: schema.prisma
AICore/app/prompts/: main.py
AICore/app/schemas/: collection.py  embedding.py  poi.py  search.py  signal_ranking.py  tasco_search.py  vector_search.py
AICore/app/scripts/: backfill_late_night_attributes.py  evaluate_tasco_search.py  generate_attribute_descriptions.py  ingest_attribute_vectors.py  ingest_poi_data.py  ingest_poi_vectors.py  poi_seed_data.py  setup_database.py
AICore/app/services/: store.py  tasco_search.py  vector_store.py
AICore/app/tasco_data/: __main__.py  pipeline.py
AICore/app/tasco_data/config/: settings.py
AICore/app/tasco_data/io/: db.py  read_source.py
AICore/app/tasco_data/llm/: litellm_service.py  prompts.py
AICore/app/tasco_data/search_documents/: build_docs.py  build_text.py  db.py
AICore/app/tasco_data/signals/: base.py  db.py  enrich_llm.py
AICore/app/tasco_data/stages/: s1_extract.py  (+1 more)
AICore/app/utils/: llm_partern.py
AICore/docker/: Dockerfile.api
AICore/docs/: 6.tasco_search_methodology.md  7.ranking_signals_and_ai_models.md
AICore/migrations/: env.py
AICore/migrations/versions/: b92ab8d728b4_create_core_tables.py
EmbeddingService/: .dockerignore  .env  .env.example  Dockerfile.cpu  pyproject.toml
EmbeddingService/app/: grpc_service.py  server.py
EmbeddingService/core/: config.py  logger.py
EmbeddingService/grpc_generated/: __init__.py  embedding_service_pb2_grpc.py
EmbeddingService/proto/: embedding_service.proto
EmbeddingService/scripts/: generate_grpc.py  test_client.py
(+19 files in other folders)
