[project]
name = "aicore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "litellm>=1.80.0",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "prisma>=0.15.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.50.2",
]

[tool.prisma]
schema = "app/prisma/schema.prisma"
