[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embedding-service"
version = "0.1.0"
authors = [
  { name = "Vietnam Cube System" }
]
description = "Embedding Service project"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "FlagEmbedding==1.3.5",
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "protobuf==6.33.1",
    "numpy==2.3.5",
    "pydantic==2.12.4",
    "pydantic-settings==2.11.0",
    "transformers==4.57.1",
    "sentencepiece==0.2.1",
    "pylate==1.5.0",
    "scipy==1.17.1",
]

[project.optional-dependencies]

[project.scripts]

[tool.uv]
# fast-plaid (transitive dep of pylate) has no manylinux aarch64 wheel,
# so skip it on linux/aarch64 (e.g. Docker on Apple Silicon).
# pylate falls back to its pure-Python path when fast-plaid is absent.
override-dependencies = [
    "fast-plaid==1.3.0.290 ; sys_platform != 'linux' or platform_machine != 'aarch64'",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
